Support for unary operators(+ or -)

--- a/ncc/Makefile
+++ b/ncc/Makefile
@@ -5,6 +5,10 @@ ncc: ncc.c
 assert: ncc
 	bash assert.sh
 
+tmp: tmp
+	gcc -o tmp tmp.s -z execstack
+	./tmp ; echo "$$?"
+
 clean:
 	rm -f ncc *.o *~ tmp*
 
