Implement comparison operators and test.sh. And minor bug fix in the parser.

--- a/ncc/Makefile
+++ b/ncc/Makefile
@@ -9,7 +9,10 @@ tmp: tmp
 	gcc -o tmp tmp.s -z execstack
 	./tmp ; echo "$$?"
 
+test: test.txt
+	bash test.sh
+
 clean:
-	rm -f ncc *.o *~ tmp*
+	rm -f ncc *.o *~ tmp* test.txt
 
 .PHONY: assert clean
