Support reading from a file

--- a/ncc/Makefile
+++ b/ncc/Makefile
@@ -2,20 +2,26 @@ CFLAGS=-std=c11 -g -static
 SRCS=$(wildcard *.c)
 OBJS=$(SRCS:%.c=%.o)
 
+NC_FILES:=$(wildcard ./toAssert/*.nc)
+
 ncc: $(OBJS)
 	$(CC) -o ncc $(OBJS) $(LDFLAGS)
 
 assert: ncc
-	bash assert.sh
+	@for file in $(NC_FILES); do \
+        echo "Processing $$file\n"; \
+		./ncc $$file > tmp.s; \
+		gcc -o tmp tmp.s -z execstack; \
+		cat $$file; \
+		./tmp; \
+		echo "\n\nreturn value: $$?\n\n";\
+	done
 
 tmp: tmp.s
 	gcc -o tmp tmp.s -z execstack
 	./tmp ; echo "$$?"
 
-test:
-	bash test.sh
-
 clean:
 	rm -f ncc *.o *~ tmp*
 
-.PHONY: assert clean test
+.PHONY: clean assert
